Assignment-2/src/parser.output
Useless nonterminals

   init_declarator_list
   init_declarator
   argument_expression_list_opt
   initializer_opt


Useless rules

  202 init_declarator_list: init_declarator
  203                     | init_declarator_list COMMA init_declarator

  204 init_declarator: declarator
  205                | declarator ASSIGN initializer

  206 argument_expression_list_opt: /* empty */
  207                             | argument_expression_list

  208 initializer_opt: /* empty */
  209                | initializer


State 4 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 23 conflicts: 3 shift/reduce
State 88 conflicts: 42 reduce/reduce
State 92 conflicts: 2 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 4 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 3 shift/reduce
State 103 conflicts: 11 shift/reduce
State 104 conflicts: 6 shift/reduce
State 240 conflicts: 1 shift/reduce
State 241 conflicts: 1 shift/reduce
State 244 conflicts: 1 shift/reduce
State 245 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 247 conflicts: 2 shift/reduce
State 248 conflicts: 4 shift/reduce
State 249 conflicts: 4 shift/reduce
State 250 conflicts: 2 shift/reduce
State 251 conflicts: 2 shift/reduce
State 252 conflicts: 2 shift/reduce
State 253 conflicts: 2 shift/reduce
State 254 conflicts: 2 shift/reduce
State 255 conflicts: 2 shift/reduce
State 256 conflicts: 3 shift/reduce
State 257 conflicts: 3 shift/reduce
State 318 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: /* empty */
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration
    5                     | class_specifier
    6                     | INCLUDE
    7                     | FUNCTION

    8 @1: /* empty */

    9 declaration: declaration_specifiers @1 SEMICOLON

   10 @2: /* empty */

   11 declaration: declaration_specifiers @2 init_declarator_list_no_func SEMICOLON

   12 declaration_specifiers: type_specifier
   13                       | storage_class_specifier
   14                       | storage_class_specifier declaration_specifiers
   15                       | type_specifier declaration_specifiers

   16 storage_class_specifier: AUTO
   17                        | STATIC
   18                        | CONST

   19 type_specifier: VOID
   20               | INT
   21               | LONG
   22               | DOUBLE
   23               | CHAR
   24               | BOOL
   25               | STRING
   26               | TYPE_NAME
   27               | STRUCT
   28               | CLASS

   29 init_declarator_list_no_func: init_declarator_no_func
   30                             | init_declarator_list_no_func COMMA init_declarator_no_func

   31 init_declarator_no_func: declarator_no_func
   32                        | declarator_no_func ASSIGN initializer

   33 declarator_no_func: pointer direct_declarator_no_func
   34                   | direct_declarator_no_func

   35 direct_declarator_no_func: IDENTIFIER
   36                          | LROUND declarator_no_func RROUND
   37                          | direct_declarator_no_func LSQUARE constant_expression_opt RSQUARE

   38 declarator: pointer direct_declarator
   39           | direct_declarator

   40 pointer: STAR
   41        | STAR pointer

   42 direct_declarator: IDENTIFIER
   43                  | LROUND declarator RROUND
   44                  | direct_declarator LROUND parameter_type_list RROUND
   45                  | direct_declarator LROUND RROUND
   46                  | direct_declarator LSQUARE constant_expression_opt RSQUARE

   47 parameter_type_list: parameter_list

   48 parameter_list: parameter_declaration
   49               | parameter_list COMMA parameter_declaration

   50 @3: /* empty */

   51 parameter_declaration: declaration_specifiers @3 declarator
   52                      | declaration_specifiers

   53 class_specifier: CLASS IDENTIFIER LCURLY member_specification RCURLY
   54                | STRUCT IDENTIFIER LCURLY member_specification RCURLY

   55 member_specification: /* empty */
   56                     | member_specification member_declaration

   57 member_declaration: PUBLIC COLON
   58                   | PRIVATE COLON
   59                   | PROTECTED COLON

   60 @4: /* empty */

   61 member_declaration: declaration_specifiers @4 member_declarator_list SEMICOLON
   62                   | declaration_specifiers SEMICOLON

   63 member_declarator_list: member_declarator
   64                       | member_declarator_list COMMA member_declarator

   65 member_declarator: declarator_no_func

   66 @5: /* empty */

   67 function_definition: declaration_specifiers function_declarator @5 compound_statement

   68 @6: /* empty */

   69 function_definition: function_declarator @6 compound_statement

   70 function_declarator: direct_function_declarator
   71                    | pointer function_declarator

   72 direct_function_declarator: IDENTIFIER LROUND parameter_type_list RROUND
   73                           | IDENTIFIER LROUND RROUND
   74                           | LROUND function_declarator RROUND
   75                           | direct_function_declarator LSQUARE constant_expression_opt RSQUARE

   76 statement: compound_statement
   77          | selection_statement
   78          | iteration_statement
   79          | jump_statement
   80          | label
   81          | expression SEMICOLON
   82          | SEMICOLON

   83 compound_statement: LCURLY RCURLY
   84                   | LCURLY block_item_list RCURLY

   85 block_item_list: block_item
   86                | block_item_list block_item

   87 block_item: declaration
   88           | statement

   89 selection_statement: IF LROUND expression RROUND statement
   90                    | IF LROUND expression RROUND statement ELSE statement
   91                    | SWITCH LROUND expression RROUND switch_body

   92 switch_body: LCURLY case_list RCURLY

   93 case_list: case_list case_label
   94          | case_label

   95 case_label: CASE constant statement
   96           | DEFAULT statement

   97 iteration_statement: WHILE LROUND expression RROUND statement
   98                    | UNTIL LROUND expression RROUND statement
   99                    | DO statement WHILE LROUND expression RROUND SEMICOLON
  100                    | FOR LROUND expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RROUND statement

  101 expression_opt: /* empty */
  102               | expression

  103 label: IDENTIFIER COLON

  104 jump_statement: GOTO IDENTIFIER SEMICOLON
  105               | CONTINUE SEMICOLON
  106               | BREAK SEMICOLON
  107               | RETURN SEMICOLON
  108               | RETURN expression SEMICOLON

  109 expression: assignment_expression
  110           | expression COMMA assignment_expression

  111 assignment_expression: conditional_expression
  112                      | unary_expression assignment_operator assignment_expression

  113 assignment_operator: ASSIGN
  114                    | PLUS_EQUAL
  115                    | MINUS_EQUAL
  116                    | STAR_EQUAL
  117                    | DIV_EQUAL
  118                    | MOD_EQUAL
  119                    | AND_EQUAL
  120                    | OR_EQUAL
  121                    | XOR_EQUAL
  122                    | LEFT_SHIFT_EQ
  123                    | RIGHT_SHIFT_EQ

  124 conditional_expression: logical_or_expression
  125                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

  126 logical_or_expression: logical_and_expression
  127                      | logical_or_expression LOGICAL_OR logical_and_expression

  128 logical_and_expression: inclusive_or_expression
  129                       | logical_and_expression LOGICAL_AND inclusive_or_expression

  130 inclusive_or_expression: exclusive_or_expression
  131                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

  132 exclusive_or_expression: and_expression
  133                        | exclusive_or_expression BITWISE_XOR and_expression

  134 and_expression: equality_expression
  135               | and_expression BITWISE_AND equality_expression

  136 equality_expression: relational_expression
  137                    | equality_expression EQUAL relational_expression
  138                    | equality_expression NOT_EQUAL relational_expression

  139 relational_expression: shift_expression
  140                      | relational_expression LESS_THAN shift_expression
  141                      | relational_expression GREATER_THAN shift_expression
  142                      | relational_expression LESS_EQUAL shift_expression
  143                      | relational_expression GREATER_EQUAL shift_expression

  144 shift_expression: additive_expression
  145                 | shift_expression LEFT_SHIFT additive_expression
  146                 | shift_expression RIGHT_SHIFT additive_expression

  147 additive_expression: multiplicative_expression
  148                    | additive_expression PLUS multiplicative_expression
  149                    | additive_expression MINUS multiplicative_expression

  150 multiplicative_expression: cast_expression
  151                          | multiplicative_expression STAR cast_expression
  152                          | multiplicative_expression DIVIDE cast_expression
  153                          | multiplicative_expression MODULUS cast_expression

  154 cast_expression: unary_expression
  155                | LROUND type_specifier RROUND cast_expression

  156 unary_expression: postfix_expression
  157                 | INCREMENT unary_expression
  158                 | DECREMENT unary_expression
  159                 | PLUS unary_expression
  160                 | MINUS unary_expression
  161                 | STAR unary_expression
  162                 | BITWISE_AND unary_expression
  163                 | LOGICAL_NOT unary_expression
  164                 | TILDE unary_expression
  165                 | SIZEOF unary_expression
  166                 | SIZEOF LROUND type_specifier RROUND

  167 postfix_expression: primary_expression
  168                   | postfix_expression LSQUARE expression RSQUARE
  169                   | postfix_expression LROUND RROUND
  170                   | postfix_expression LROUND argument_expression_list RROUND
  171                   | postfix_expression DOT IDENTIFIER
  172                   | postfix_expression ARROW IDENTIFIER
  173                   | postfix_expression INCREMENT
  174                   | postfix_expression DECREMENT
  175                   | NEW type_specifier
  176                   | DELETE unary_expression

  177 primary_expression: IDENTIFIER
  178                   | constant
  179                   | STRING_LITERAL
  180                   | LROUND expression RROUND
  181                   | COUT LEFT_SHIFT argument_expression_list
  182                   | CIN RIGHT_SHIFT IDENTIFIER
  183                   | ENDL
  184                   | INVALID_IDENTIFIER

  185 argument_expression_list: assignment_expression
  186                         | argument_expression_list COMMA assignment_expression

  187 constant_expression_opt: /* empty */
  188                        | assignment_expression

  189 initializer: assignment_expression
  190            | LCURLY initializer_list RCURLY
  191            | LCURLY initializer_list COMMA RCURLY

  192 initializer_list: initializer
  193                 | initializer_list COMMA initializer

  194 constant: DECIMAL_LITERAL
  195         | CHARACTER_LITERAL
  196         | STRING_LITERAL
  197         | EXPONENT_LITERAL
  198         | DOUBLE_LITERAL
  199         | NULLPTR
  200         | TRUE
  201         | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
INCLUDE (258) 6
PLUS (259) 148 159
MINUS (260) 149 160
STAR (261) 40 41 151 161
DIVIDE (262) 152
MODULUS (263) 153
ASSIGN (264) 32 113
INCREMENT (265) 157 173
DECREMENT (266) 158 174
EQUAL (267) 137
NOT_EQUAL (268) 138
LESS_THAN (269) 140
GREATER_THAN (270) 141
LESS_EQUAL (271) 142
GREATER_EQUAL (272) 143
BITWISE_AND (273) 135 162
BITWISE_OR (274) 131
BITWISE_XOR (275) 133
LEFT_SHIFT (276) 145 181
RIGHT_SHIFT (277) 146 182
ARROW (278) 172
LOGICAL_NOT (279) 163
LOGICAL_AND (280) 129
LOGICAL_OR (281) 127
PLUS_EQUAL (282) 114
MINUS_EQUAL (283) 115
STAR_EQUAL (284) 116
DIV_EQUAL (285) 117
MOD_EQUAL (286) 118
AND_EQUAL (287) 119
OR_EQUAL (288) 120
XOR_EQUAL (289) 121
LEFT_SHIFT_EQ (290) 122
RIGHT_SHIFT_EQ (291) 123
LROUND (292) 36 43 44 45 72 73 74 89 90 91 97 98 99 100 155 166 169
    170 180
RROUND (293) 36 43 44 45 72 73 74 89 90 91 97 98 99 100 155 166 169
    170 180
LCURLY (294) 53 54 83 84 92 190 191
RCURLY (295) 53 54 83 84 92 190 191
LSQUARE (296) 37 46 75 168
RSQUARE (297) 37 46 75 168
SEMICOLON (298) 9 11 61 62 81 82 99 100 104 105 106 107 108
COLON (299) 57 58 59 103 125
COMMA (300) 30 49 64 110 186 191 193
DOT (301) 171
QUESTION_MARK (302) 125
TILDE (303) 164
IF (304) 89 90
ELSE (305) 90
SWITCH (306) 91
CASE (307) 95
DEFAULT (308) 96
WHILE (309) 97 99
DO (310) 99
FOR (311) 100
GOTO (312) 104
CONTINUE (313) 105
BREAK (314) 106
RETURN (315) 107 108
UNTIL (316) 98
SIZEOF (317) 165 166
VOID (318) 19
INT (319) 20
DOUBLE (320) 22
CHAR (321) 23
BOOL (322) 24
STRING (323) 25
LONG (324) 21
TRUE (325) 200
FALSE (326) 201
NULLPTR (327) 199
AUTO (328) 16
STATIC (329) 17
CONST (330) 18
CLASS (331) 28 53
STRUCT (332) 27 54
PUBLIC (333) 57
PRIVATE (334) 58
PROTECTED (335) 59
DELETE (336) 176
NEW (337) 175
CIN (338) 182
COUT (339) 181
ENDL (340) 183
TYPE_NAME (341) 26
IDENTIFIER (342) 35 42 53 54 72 73 103 104 171 172 177 182
DECIMAL_LITERAL (343) 194
DOUBLE_LITERAL (344) 198
EXPONENT_LITERAL (345) 197
CHARACTER_LITERAL (346) 195
STRING_LITERAL (347) 179 196
FUNCTION (348) 7
INVALID_IDENTIFIER (349) 184


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
translation_unit (96)
    on left: 1 2, on right: 0 2
external_declaration (97)
    on left: 3 4 5 6 7, on right: 2
declaration (98)
    on left: 9 11, on right: 4 87
@1 (99)
    on left: 8, on right: 9
@2 (100)
    on left: 10, on right: 11
declaration_specifiers (101)
    on left: 12 13 14 15, on right: 9 11 14 15 51 52 61 62 67
storage_class_specifier (102)
    on left: 16 17 18, on right: 13 14
type_specifier (103)
    on left: 19 20 21 22 23 24 25 26 27 28, on right: 12 15 155 166
    175
init_declarator_list_no_func (104)
    on left: 29 30, on right: 11 30
init_declarator_no_func (105)
    on left: 31 32, on right: 29 30
declarator_no_func (106)
    on left: 33 34, on right: 31 32 36 65
direct_declarator_no_func (107)
    on left: 35 36 37, on right: 33 34 37
declarator (108)
    on left: 38 39, on right: 43 51
pointer (109)
    on left: 40 41, on right: 33 38 41 71
direct_declarator (110)
    on left: 42 43 44 45 46, on right: 38 39 44 45 46
parameter_type_list (111)
    on left: 47, on right: 44 72
parameter_list (112)
    on left: 48 49, on right: 47 49
parameter_declaration (113)
    on left: 51 52, on right: 48 49
@3 (114)
    on left: 50, on right: 51
class_specifier (115)
    on left: 53 54, on right: 5
member_specification (116)
    on left: 55 56, on right: 53 54 56
member_declaration (117)
    on left: 57 58 59 61 62, on right: 56
@4 (118)
    on left: 60, on right: 61
member_declarator_list (119)
    on left: 63 64, on right: 61 64
member_declarator (120)
    on left: 65, on right: 63 64
function_definition (121)
    on left: 67 69, on right: 3
@5 (122)
    on left: 66, on right: 67
@6 (123)
    on left: 68, on right: 69
function_declarator (124)
    on left: 70 71, on right: 67 69 71 74
direct_function_declarator (125)
    on left: 72 73 74 75, on right: 70 75
statement (126)
    on left: 76 77 78 79 80 81 82, on right: 88 89 90 95 96 97 98 99
    100
compound_statement (127)
    on left: 83 84, on right: 67 69 76
block_item_list (128)
    on left: 85 86, on right: 84 86
block_item (129)
    on left: 87 88, on right: 85 86
selection_statement (130)
    on left: 89 90 91, on right: 77
switch_body (131)
    on left: 92, on right: 91
case_list (132)
    on left: 93 94, on right: 92 93
case_label (133)
    on left: 95 96, on right: 93 94
iteration_statement (134)
    on left: 97 98 99 100, on right: 78
expression_opt (135)
    on left: 101 102, on right: 100
label (136)
    on left: 103, on right: 80
jump_statement (137)
    on left: 104 105 106 107 108, on right: 79
expression (138)
    on left: 109 110, on right: 81 89 90 91 97 98 99 102 108 110 125
    168 180
assignment_expression (139)
    on left: 111 112, on right: 109 110 112 185 186 188 189
assignment_operator (140)
    on left: 113 114 115 116 117 118 119 120 121 122 123,
    on right: 112
conditional_expression (141)
    on left: 124 125, on right: 111 125
logical_or_expression (142)
    on left: 126 127, on right: 124 125 127
logical_and_expression (143)
    on left: 128 129, on right: 126 127 129
inclusive_or_expression (144)
    on left: 130 131, on right: 128 129 131
exclusive_or_expression (145)
    on left: 132 133, on right: 130 131 133
and_expression (146)
    on left: 134 135, on right: 132 133 135
equality_expression (147)
    on left: 136 137 138, on right: 134 135 137 138
relational_expression (148)
    on left: 139 140 141 142 143, on right: 136 137 138 140 141 142
    143
shift_expression (149)
    on left: 144 145 146, on right: 139 140 141 142 143 145 146
additive_expression (150)
    on left: 147 148 149, on right: 144 145 146 148 149
multiplicative_expression (151)
    on left: 150 151 152 153, on right: 147 148 149 151 152 153
cast_expression (152)
    on left: 154 155, on right: 150 151 152 153 155
unary_expression (153)
    on left: 156 157 158 159 160 161 162 163 164 165 166,
    on right: 112 154 157 158 159 160 161 162 163 164 165 176
postfix_expression (154)
    on left: 167 168 169 170 171 172 173 174 175 176,
    on right: 156 168 169 170 171 172 173 174
primary_expression (155)
    on left: 177 178 179 180 181 182 183 184, on right: 167
argument_expression_list (156)
    on left: 185 186, on right: 170 181 186
constant_expression_opt (157)
    on left: 187 188, on right: 37 46 75
initializer (158)
    on left: 189 190 191, on right: 32 192 193
initializer_list (159)
    on left: 192 193, on right: 190 191 193
constant (160)
    on left: 194 195 196 197 198 199 200 201, on right: 95 178


state 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 (translation_unit)

    translation_unit  go to state 1


state 1

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 2
    INCLUDE     shift, and go to state 3
    STAR        shift, and go to state 4
    LROUND      shift, and go to state 5
    VOID        shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    CHAR        shift, and go to state 9
    BOOL        shift, and go to state 10
    STRING      shift, and go to state 11
    LONG        shift, and go to state 12
    AUTO        shift, and go to state 13
    STATIC      shift, and go to state 14
    CONST       shift, and go to state 15
    CLASS       shift, and go to state 16
    STRUCT      shift, and go to state 17
    TYPE_NAME   shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    FUNCTION    shift, and go to state 20

    external_declaration        go to state 21
    declaration                 go to state 22
    declaration_specifiers      go to state 23
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    pointer                     go to state 26
    class_specifier             go to state 27
    function_definition         go to state 28
    function_declarator         go to state 29
    direct_function_declarator  go to state 30


state 2

    0 $accept: translation_unit $end .

    $default  accept


state 3

    6 external_declaration: INCLUDE .

    $default  reduce using rule 6 (external_declaration)


state 4

   40 pointer: STAR .
   41        | STAR . pointer

    STAR  shift, and go to state 4

    STAR      [reduce using rule 40 (pointer)]
    $default  reduce using rule 40 (pointer)

    pointer  go to state 31


state 5

   74 direct_function_declarator: LROUND . function_declarator RROUND

    STAR        shift, and go to state 4
    LROUND      shift, and go to state 5
    IDENTIFIER  shift, and go to state 19

    pointer                     go to state 26
    function_declarator         go to state 32
    direct_function_declarator  go to state 30


state 6

   19 type_specifier: VOID .

    $default  reduce using rule 19 (type_specifier)


state 7

   20 type_specifier: INT .

    $default  reduce using rule 20 (type_specifier)


state 8

   22 type_specifier: DOUBLE .

    $default  reduce using rule 22 (type_specifier)


state 9

   23 type_specifier: CHAR .

    $default  reduce using rule 23 (type_specifier)


state 10

   24 type_specifier: BOOL .

    $default  reduce using rule 24 (type_specifier)


state 11

   25 type_specifier: STRING .

    $default  reduce using rule 25 (type_specifier)


state 12

   21 type_specifier: LONG .

    $default  reduce using rule 21 (type_specifier)


state 13

   16 storage_class_specifier: AUTO .

    $default  reduce using rule 16 (storage_class_specifier)


state 14

   17 storage_class_specifier: STATIC .

    $default  reduce using rule 17 (storage_class_specifier)


state 15

   18 storage_class_specifier: CONST .

    $default  reduce using rule 18 (storage_class_specifier)


state 16

   28 type_specifier: CLASS .
   53 class_specifier: CLASS . IDENTIFIER LCURLY member_specification RCURLY

    IDENTIFIER  shift, and go to state 33

    IDENTIFIER  [reduce using rule 28 (type_specifier)]
    $default    reduce using rule 28 (type_specifier)


state 17

   27 type_specifier: STRUCT .
   54 class_specifier: STRUCT . IDENTIFIER LCURLY member_specification RCURLY

    IDENTIFIER  shift, and go to state 34

    IDENTIFIER  [reduce using rule 27 (type_specifier)]
    $default    reduce using rule 27 (type_specifier)


state 18

   26 type_specifier: TYPE_NAME .

    $default  reduce using rule 26 (type_specifier)


state 19

   72 direct_function_declarator: IDENTIFIER . LROUND parameter_type_list RROUND
   73                           | IDENTIFIER . LROUND RROUND

    LROUND  shift, and go to state 35


state 20

    7 external_declaration: FUNCTION .

    $default  reduce using rule 7 (external_declaration)


state 21

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 22

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 23

    9 declaration: declaration_specifiers . @1 SEMICOLON
   11            | declaration_specifiers . @2 init_declarator_list_no_func SEMICOLON
   67 function_definition: declaration_specifiers . function_declarator @5 compound_statement

    STAR        shift, and go to state 4
    LROUND      shift, and go to state 5
    IDENTIFIER  shift, and go to state 19

    STAR        [reduce using rule 10 (@2)]
    LROUND      [reduce using rule 10 (@2)]
    IDENTIFIER  [reduce using rule 10 (@2)]
    $default    reduce using rule 8 (@1)

    @1                          go to state 36
    @2                          go to state 37
    pointer                     go to state 26
    function_declarator         go to state 38
    direct_function_declarator  go to state 30


state 24

   13 declaration_specifiers: storage_class_specifier .
   14                       | storage_class_specifier . declaration_specifiers

    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    CHAR       shift, and go to state 9
    BOOL       shift, and go to state 10
    STRING     shift, and go to state 11
    LONG       shift, and go to state 12
    AUTO       shift, and go to state 13
    STATIC     shift, and go to state 14
    CONST      shift, and go to state 15
    CLASS      shift, and go to state 39
    STRUCT     shift, and go to state 40
    TYPE_NAME  shift, and go to state 18

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 24
    type_specifier           go to state 25


state 25

   12 declaration_specifiers: type_specifier .
   15                       | type_specifier . declaration_specifiers

    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    CHAR       shift, and go to state 9
    BOOL       shift, and go to state 10
    STRING     shift, and go to state 11
    LONG       shift, and go to state 12
    AUTO       shift, and go to state 13
    STATIC     shift, and go to state 14
    CONST      shift, and go to state 15
    CLASS      shift, and go to state 39
    STRUCT     shift, and go to state 40
    TYPE_NAME  shift, and go to state 18

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 24
    type_specifier           go to state 25


state 26

   71 function_declarator: pointer . function_declarator

    STAR        shift, and go to state 4
    LROUND      shift, and go to state 5
    IDENTIFIER  shift, and go to state 19

    pointer                     go to state 26
    function_declarator         go to state 43
    direct_function_declarator  go to state 30


state 27

    5 external_declaration: class_specifier .

    $default  reduce using rule 5 (external_declaration)


state 28

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 29

   69 function_definition: function_declarator . @6 compound_statement

    $default  reduce using rule 68 (@6)

    @6  go to state 44


state 30

   70 function_declarator: direct_function_declarator .
   75 direct_function_declarator: direct_function_declarator . LSQUARE constant_expression_opt RSQUARE

    LSQUARE  shift, and go to state 45

    $default  reduce using rule 70 (function_declarator)


state 31

   41 pointer: STAR pointer .

    $default  reduce using rule 41 (pointer)


state 32

   74 direct_function_declarator: LROUND function_declarator . RROUND

    RROUND  shift, and go to state 46


state 33

   53 class_specifier: CLASS IDENTIFIER . LCURLY member_specification RCURLY

    LCURLY  shift, and go to state 47


state 34

   54 class_specifier: STRUCT IDENTIFIER . LCURLY member_specification RCURLY

    LCURLY  shift, and go to state 48


state 35

   72 direct_function_declarator: IDENTIFIER LROUND . parameter_type_list RROUND
   73                           | IDENTIFIER LROUND . RROUND

    RROUND     shift, and go to state 49
    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    CHAR       shift, and go to state 9
    BOOL       shift, and go to state 10
    STRING     shift, and go to state 11
    LONG       shift, and go to state 12
    AUTO       shift, and go to state 13
    STATIC     shift, and go to state 14
    CONST      shift, and go to state 15
    CLASS      shift, and go to state 39
    STRUCT     shift, and go to state 40
    TYPE_NAME  shift, and go to state 18

    declaration_specifiers   go to state 50
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    parameter_type_list      go to state 51
    parameter_list           go to state 52
    parameter_declaration    go to state 53


state 36

    9 declaration: declaration_specifiers @1 . SEMICOLON

    SEMICOLON  shift, and go to state 54


state 37

   11 declaration: declaration_specifiers @2 . init_declarator_list_no_func SEMICOLON

    STAR        shift, and go to state 4
    LROUND      shift, and go to state 55
    IDENTIFIER  shift, and go to state 56

    init_declarator_list_no_func  go to state 57
    init_declarator_no_func       go to state 58
    declarator_no_func            go to state 59
    direct_declarator_no_func     go to state 60
    pointer                       go to state 61


state 38

   67 function_definition: declaration_specifiers function_declarator . @5 compound_statement

    $default  reduce using rule 66 (@5)

    @5  go to state 62


state 39

   28 type_specifier: CLASS .

    $default  reduce using rule 28 (type_specifier)


state 40

   27 type_specifier: STRUCT .

    $default  reduce using rule 27 (type_specifier)


state 41

   14 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


state 42

   15 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 15 (declaration_specifiers)


state 43

   71 function_declarator: pointer function_declarator .

    $default  reduce using rule 71 (function_declarator)


state 44

   69 function_definition: function_declarator @6 . compound_statement

    LCURLY  shift, and go to state 63

    compound_statement  go to state 64


state 45

   75 direct_function_declarator: direct_function_declarator LSQUARE . constant_expression_opt RSQUARE

    PLUS                shift, and go to state 65
    MINUS               shift, and go to state 66
    STAR                shift, and go to state 67
    INCREMENT           shift, and go to state 68
    DECREMENT           shift, and go to state 69
    BITWISE_AND         shift, and go to state 70
    LOGICAL_NOT         shift, and go to state 71
    LROUND              shift, and go to state 72
    TILDE               shift, and go to state 73
    SIZEOF              shift, and go to state 74
    TRUE                shift, and go to state 75
    FALSE               shift, and go to state 76
    NULLPTR             shift, and go to state 77
    DELETE              shift, and go to state 78
    NEW                 shift, and go to state 79
    CIN                 shift, and go to state 80
    COUT                shift, and go to state 81
    ENDL                shift, and go to state 82
    IDENTIFIER          shift, and go to state 83
    DECIMAL_LITERAL     shift, and go to state 84
    DOUBLE_LITERAL      shift, and go to state 85
    EXPONENT_LITERAL    shift, and go to state 86
    CHARACTER_LITERAL   shift, and go to state 87
    STRING_LITERAL      shift, and go to state 88
    INVALID_IDENTIFIER  shift, and go to state 89

    $default  reduce using rule 187 (constant_expression_opt)

    assignment_expression      go to state 90
    conditional_expression     go to state 91
    logical_or_expression      go to state 92
    logical_and_expression     go to state 93
    inclusive_or_expression    go to state 94
    exclusive_or_expression    go to state 95
    and_expression             go to state 96
    equality_expression        go to state 97
    relational_expression      go to state 98
    shift_expression           go to state 99
    additive_expression        go to state 100
    multiplicative_expression  go to state 101
    cast_expression            go to state 102
    unary_expression           go to state 103
    postfix_expression         go to state 104
    primary_expression         go to state 105
    constant_expression_opt    go to state 106
    constant                   go to state 107


state 46

   74 direct_function_declarator: LROUND function_declarator RROUND .

    $default  reduce using rule 74 (direct_function_declarator)


state 47

   53 class_specifier: CLASS IDENTIFIER LCURLY . member_specification RCURLY

    $default  reduce using rule 55 (member_specification)

    member_specification  go to state 108


state 48

   54 class_specifier: STRUCT IDENTIFIER LCURLY . member_specification RCURLY

    $default  reduce using rule 55 (member_specification)

    member_specification  go to state 109


state 49

   73 direct_function_declarator: IDENTIFIER LROUND RROUND .

    $default  reduce using rule 73 (direct_function_declarator)


state 50

   51 parameter_declaration: declaration_specifiers . @3 declarator
   52                      | declaration_specifiers .

    RROUND    reduce using rule 52 (parameter_declaration)
    COMMA     reduce using rule 52 (parameter_declaration)
    $default  reduce using rule 50 (@3)

    @3  go to state 110


state 51

   72 direct_function_declarator: IDENTIFIER LROUND parameter_type_list . RROUND

    RROUND  shift, and go to state 111


state 52

   47 parameter_type_list: parameter_list .
   49 parameter_list: parameter_list . COMMA parameter_declaration

    COMMA  shift, and go to state 112

    $default  reduce using rule 47 (parameter_type_list)


state 53

   48 parameter_list: parameter_declaration .

    $default  reduce using rule 48 (parameter_list)


state 54

    9 declaration: declaration_specifiers @1 SEMICOLON .

    $default  reduce using rule 9 (declaration)


state 55

   36 direct_declarator_no_func: LROUND . declarator_no_func RROUND

    STAR        shift, and go to state 4
    LROUND      shift, and go to state 55
    IDENTIFIER  shift, and go to state 56

    declarator_no_func         go to state 113
    direct_declarator_no_func  go to state 60
    pointer                    go to state 61


state 56

   35 direct_declarator_no_func: IDENTIFIER .

    $default  reduce using rule 35 (direct_declarator_no_func)


state 57

   11 declaration: declaration_specifiers @2 init_declarator_list_no_func . SEMICOLON
   30 init_declarator_list_no_func: init_declarator_list_no_func . COMMA init_declarator_no_func

    SEMICOLON  shift, and go to state 114
    COMMA      shift, and go to state 115


state 58

   29 init_declarator_list_no_func: init_declarator_no_func .

    $default  reduce using rule 29 (init_declarator_list_no_func)


state 59

   31 init_declarator_no_func: declarator_no_func .
   32                        | declarator_no_func . ASSIGN initializer

    ASSIGN  shift, and go to state 116

    $default  reduce using rule 31 (init_declarator_no_func)


state 60

   34 declarator_no_func: direct_declarator_no_func .
   37 direct_declarator_no_func: direct_declarator_no_func . LSQUARE constant_expression_opt RSQUARE

    LSQUARE  shift, and go to state 117

    $default  reduce using rule 34 (declarator_no_func)


state 61

   33 declarator_no_func: pointer . direct_declarator_no_func

    LROUND      shift, and go to state 55
    IDENTIFIER  shift, and go to state 56

    direct_declarator_no_func  go to state 118


state 62

   67 function_definition: declaration_specifiers function_declarator @5 . compound_statement

    LCURLY  shift, and go to state 63

    compound_statement  go to state 119


state 63

   83 compound_statement: LCURLY . RCURLY
   84                   | LCURLY . block_item_list RCURLY
